# renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  face.cpp  face.h  geometry.h  main  main.cpp  model.cpp  model.h  output.tga  util.cpp  util.h  vertex.h
fancy/: main_fancy.cpp
src/: RendererConfig.h.in  main.cpp  model.h  tgaimage.cpp  util.cpp  util.h  vertex.cpp
